# pumpnex-service-blockchain-api

./: .gitignore  Cargo.toml  Cargo.toml.debug  Cargo.toml.sha256  Cargo.toml.verify  Dockerfile  Makefile  README.md  debug_signing.rs  docker-compose.override.yml  docker-compose.yml  gen_token.py  login.sh  middleware_test.rs  nginx-api.conf  nginx.conf  verify_sha256_test.rs  verify_test.rs  ws_summary.json
.Cursor/Rules/: 01-Global.mdc  10-Project-Context-and-Scope.mdc  11-Architecture-and-Files.mdc  12-Coding-Standards.mdc  13-Config-and-Environments.mdc  14-Security-Auth-WAF-RateLimit.mdc  15-Data-Postgres-Redis-Kafka.mdc  16-API-and-Docs.mdc  17-Observability.mdc  18-CI-CD-and-Quality.mdc  19-Process-TT-Stages-and-Delivery.mdc
.github/workflows/: cd.yml  ci.yml
api/: Cargo.toml
api/src/: app_state.rs  cache.rs  main.rs  openapi.rs
api/src/config/: mod.rs
api/src/errors/: mod.rs
api/src/http/: mod.rs
api/src/http/middleware/: logger.rs  mod.rs  otel.rs  ratelimit.rs  request_id.rs  security_headers.rs  waf.rs  wallet_auth.rs
api/src/http/routes/: admin_waf.rs  auth.rs  health.rs  metrics.rs  mod.rs  openapi_routes.rs  transactions.rs  version.rs
api/src/infra/: kafka.rs  mod.rs  postgres.rs  redis.rs
api/src/ingest/: bridge.rs  kafka.rs  mod.rs  normalize.rs
api/src/metrics/: mod.rs
api/src/repository/: mod.rs  transactions.rs  users.rs
api/src/telemetry/: mod.rs  otel.rs
api/src/ws/: mod.rs  tx.rs
config/: app.toml  default.toml
configs/dev/: default.toml
configs/prod/: default.toml
configs/stage/: default.toml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/solana/: Cargo.toml
crates/solana/src/: lib.rs
docs/grafana/: README.md
docs/prompts/: RULES_CONSISTENCY_CHECK.md  TT_STAGE_REQUEST.md  UNBLOCKER_ASK_FOR_FILE.md
infra/docker/: .dockerignore  Dockerfile  docker-compose.yml
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
infra/load/: README.md
infra/load/k6/: bad_actor.js  transactions.js  ws_tx.js
infra/monitoring/: prometheus-rules.yml
migrations/: 2025092601_init.sql  202510011_create_user_permissions.sql  20251015_solana_schema.sql
src/: db.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs  websocket.rs
src/api/: mod.rs  rest.rs
src/handlers/: mod.rs  transactions.rs  websocket.rs
src/routes/: auth.rs  health.rs
tests/: middleware_test.rs  rest_test.rs
