[package]
name = "blockchain_api_v2"
version = "0.24.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["rustls", "http2"] }
actix-web-actors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }
governor = "0.6"
nonzero_ext = "0.3"
tokio = { version = "1.40", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
redis = { version = "0.23", features = ["tokio-comp", "cluster", "connection-manager"] }
deadpool-redis = "0.15"
rdkafka = { version = "0.29", features = ["tokio"] }
rustls = "0.21"
rustls-pemfile = "1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.17", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dashmap = "5.4"
moka = { version = "0.9", features = ["sync", "future"] }
mimalloc = { version = "0.1", features = ["secure"] }
backoff = { version = "0.4", features = ["tokio"] }
solana-sdk = "1.18.0"
solana-client = "1.18.0"
solana-rpc-client = "1.18.0"
config = { version = "0.13", features = ["toml", "yaml", "json"] }
thiserror = "1.0"
hex = "0.4"
regex = "1.10"
dotenvy = "0.15"
rayon = "1.8"
bs58 = "0.5"
futures-util = "0.3"
ed25519-dalek = "1.0"
shellexpand = "2.1"

[dev-dependencies]
actix-rt = "2.10"
serial_test = "2.0"
testcontainers = "0.15"
wiremock = "0.6"
pretty_assertions = "1.4"
rand = "0.8"
criterion = "0.5"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
