[package]
name = "blockchain_api_v2"
version = "0.24.0"
edition = "2021"

[lib]
name = "blockchain_api_v2"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-rt = "2.10"
actix-cors = "0.6"
actix-web-actors = "4.2"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
utoipa = { version = "3.5", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
deadpool-redis = { version = "0.12", features = ["serde"] }
redis = "0.23"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
bs58 = "0.5"
sha2 = "0.10"
solana-sdk = "1.18.0"
solana-program = "1.18.0"
rand = "0.8"
ed25519-dalek = "1.0.1"

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
