[workspace]
members = [
    "api",
    "crates/auth",
    "crates/cache",
    "crates/solana",
    "crates/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PumpNex Team"]
license = "MIT"

[workspace.dependencies]
# Actix
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"

# Async
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager", "aio"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Crypto
ed25519-dalek = "2.1"
bs58 = "0.5"
rand = "0.8"
base64 = "0.22"
